--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,21 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 @import "tailwindcss";
 
 :root {
   --background: #D9D9D9;
-  --foreground: #171717; /* Cor do texto, pode ajustar se necessário */
-  --font-sans: var(--font-geist-sans);
+  --foreground: #171717;
+  --dark: #111928;
+  
+  --font-sans: 'Inter', sans-serif;
   --font-mono: var(--font-geist-mono);
-}
 
-@theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-sans: var(--font-sans);
+  --font-mono: var(--font-mono);
 }
 
 body {
   background-color: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  color: var(--dark);
+  font-family: var(--font-sans);
 }
